--- a/InsuranceClaimStatus.ipynb
+++ b/InsuranceClaimStatus.ipynb
@@ -2,6 +2,424 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('insurance_part2_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Agency_Code</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Claimed</th>\n",
+       "      <th>Commision</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Destination</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>48</td>\n",
+       "      <td>C2B</td>\n",
+       "      <td>Airlines</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>Customised Plan</td>\n",
+       "      <td>ASIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>EPX</td>\n",
+       "      <td>Travel Agency</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>34</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>Customised Plan</td>\n",
+       "      <td>ASIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>39</td>\n",
+       "      <td>CWT</td>\n",
+       "      <td>Travel Agency</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5.94</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.90</td>\n",
+       "      <td>Customised Plan</td>\n",
+       "      <td>Americas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36</td>\n",
+       "      <td>EPX</td>\n",
+       "      <td>Travel Agency</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>Cancellation Plan</td>\n",
+       "      <td>ASIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33</td>\n",
+       "      <td>JZI</td>\n",
+       "      <td>Airlines</td>\n",
+       "      <td>No</td>\n",
+       "      <td>6.30</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>53</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>Bronze Plan</td>\n",
+       "      <td>ASIA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Agency_Code           Type Claimed  Commision Channel  Duration  Sales  \\\n",
+       "0   48         C2B       Airlines      No       0.70  Online         7   2.51   \n",
+       "1   36         EPX  Travel Agency      No       0.00  Online        34  20.00   \n",
+       "2   39         CWT  Travel Agency      No       5.94  Online         3   9.90   \n",
+       "3   36         EPX  Travel Agency      No       0.00  Online         4  26.00   \n",
+       "4   33         JZI       Airlines      No       6.30  Online        53  18.00   \n",
+       "\n",
+       "        Product Name Destination  \n",
+       "0    Customised Plan        ASIA  \n",
+       "1    Customised Plan        ASIA  \n",
+       "2    Customised Plan    Americas  \n",
+       "3  Cancellation Plan        ASIA  \n",
+       "4        Bronze Plan        ASIA  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3000 entries, 0 to 2999\n",
+      "Data columns (total 10 columns):\n",
+      "Age             3000 non-null int64\n",
+      "Agency_Code     3000 non-null object\n",
+      "Type            3000 non-null object\n",
+      "Claimed         3000 non-null object\n",
+      "Commision       3000 non-null float64\n",
+      "Channel         3000 non-null object\n",
+      "Duration        3000 non-null int64\n",
+      "Sales           3000 non-null float64\n",
+      "Product Name    3000 non-null object\n",
+      "Destination     3000 non-null object\n",
+      "dtypes: float64(2), int64(2), object(6)\n",
+      "memory usage: 234.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Commision</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3000.000000</td>\n",
+       "      <td>3000.000000</td>\n",
+       "      <td>3000.000000</td>\n",
+       "      <td>3000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>38.091000</td>\n",
+       "      <td>14.529203</td>\n",
+       "      <td>70.001333</td>\n",
+       "      <td>60.249913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.463518</td>\n",
+       "      <td>25.481455</td>\n",
+       "      <td>134.053313</td>\n",
+       "      <td>70.733954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>4.630000</td>\n",
+       "      <td>26.500000</td>\n",
+       "      <td>33.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>17.235000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>210.210000</td>\n",
+       "      <td>4580.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Age    Commision     Duration        Sales\n",
+       "count  3000.000000  3000.000000  3000.000000  3000.000000\n",
+       "mean     38.091000    14.529203    70.001333    60.249913\n",
+       "std      10.463518    25.481455   134.053313    70.733954\n",
+       "min       8.000000     0.000000    -1.000000     0.000000\n",
+       "25%      32.000000     0.000000    11.000000    20.000000\n",
+       "50%      36.000000     4.630000    26.500000    33.000000\n",
+       "75%      42.000000    17.235000    63.000000    69.000000\n",
+       "max      84.000000   210.210000  4580.000000   539.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age has no missing values\n",
+      "Agency_Code has no missing values\n",
+      "Type has no missing values\n",
+      "Claimed has no missing values\n",
+      "Commision has no missing values\n",
+      "Channel has no missing values\n",
+      "Duration has no missing values\n",
+      "Sales has no missing values\n",
+      "Product Name has no missing values\n",
+      "Destination has no missing values\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = [i for i in df.columns]\n",
+    "for i in columns:\n",
+    "    if '?' in df[i]:\n",
+    "        print(\"missing values is present in {}\".format(i))\n",
+    "    else:\n",
+    "        print(\"{} has no missing values\".format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2861"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
