--- a/InsuranceClaimStatus.ipynb
+++ b/InsuranceClaimStatus.ipynb
@@ -644,6 +644,142 @@
    "source": [
     "### There is no significant relationship present in between different features."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Fitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(scaled_data, y, test_size=0.30, random_state=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(random_state=40)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = DecisionTreeClassifier(random_state=40)\n",
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_train = model.predict(x_train)\n",
+    "predict_test = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Training Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.99      0.99      0.99      1381\n",
+      "         1.0       0.99      0.97      0.98       621\n",
+      "\n",
+      "    accuracy                           0.99      2002\n",
+      "   macro avg       0.99      0.98      0.98      2002\n",
+      "weighted avg       0.99      0.99      0.99      2002\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Training Set\\n')\n",
+    "print(classification_report(y_train, predict_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Test Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.75      0.77      0.76       566\n",
+      "         1.0       0.53      0.51      0.52       293\n",
+      "\n",
+      "    accuracy                           0.68       859\n",
+      "   macro avg       0.64      0.64      0.64       859\n",
+      "weighted avg       0.68      0.68      0.68       859\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Test Set\\n')\n",
+    "print(classification_report(y_test, predict_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Therefore, our model is performing overfitting that is performs well on training set but mesirable on test set.\n",
+    "### Also, the model is not valid because the difference in both model accuracy and other params is greater than 5%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Will perform parameters tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
