model hyper-parameter tuning

--- a/InsuranceClaimStatus.ipynb
+++ b/InsuranceClaimStatus.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "DecisionTreeClassifier(random_state=40)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -776,10 +776,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'max_depth': [7, 10, 15],\n",
+    "    'min_samples_split': [8, 10, 20],\n",
+    "    'min_samples_leaf': [8, 10, 20],\n",
+    "    'max_leaf_nodes': [7, 10, 15]\n",
+    "}\n",
+    "grid_search = GridSearchCV(model, params, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, estimator=DecisionTreeClassifier(),\n",
+       "             param_grid={'criterion': ['gini', 'entropy'],\n",
+       "                         'max_depth': [7, 10, 15],\n",
+       "                         'max_leaf_nodes': [7, 10, 15],\n",
+       "                         'min_samples_leaf': [8, 10, 20],\n",
+       "                         'min_samples_split': [8, 10, 20]})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=7, max_leaf_nodes=10, min_samples_leaf=8,\n",
+       "                       min_samples_split=8)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini',\n",
+       " 'max_depth': 7,\n",
+       " 'max_leaf_nodes': 10,\n",
+       " 'min_samples_leaf': 8,\n",
+       " 'min_samples_split': 8}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=7, max_leaf_nodes=10, min_samples_leaf=8,\n",
+       "                       min_samples_split=8)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_training_set = model.predict(x_train)\n",
+    "predict_test_set = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Training Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.83      0.86      0.85      1381\n",
+      "         1.0       0.67      0.62      0.64       621\n",
+      "\n",
+      "    accuracy                           0.79      2002\n",
+      "   macro avg       0.75      0.74      0.74      2002\n",
+      "weighted avg       0.78      0.79      0.78      2002\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Training Set\\n')\n",
+    "print(classification_report(y_train, predict_training_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Test Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.81      0.86      0.83       566\n",
+      "         1.0       0.69      0.61      0.65       293\n",
+      "\n",
+      "    accuracy                           0.77       859\n",
+      "   macro avg       0.75      0.73      0.74       859\n",
+      "weighted avg       0.77      0.77      0.77       859\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Test Set\\n')\n",
+    "print(classification_report(y_test, predict_test_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With the help of hyperparameter tuning, we got the valid model and the results looks good on test set as well even precision and f1 score increases slighlty.\n",
+    "### Accuracy on test dataset is 77% which is quite good."
+   ]
   }
  ],
  "metadata": {
