performing random forest algo

--- a/InsuranceClaimStatus.ipynb
+++ b/InsuranceClaimStatus.ipynb
@@ -972,6 +972,131 @@
     "### With the help of hyperparameter tuning, we got the valid model and the results looks good on test set as well even precision and f1 score increases slighlty.\n",
     "### Accuracy on test dataset is 77% which is quite good."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=500, random_state=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=500, random_state=40)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_train_set = model.predict(x_train)\n",
+    "predict_test_set = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Training Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.99      0.99      0.99      1381\n",
+      "         1.0       0.97      0.98      0.98       621\n",
+      "\n",
+      "    accuracy                           0.99      2002\n",
+      "   macro avg       0.98      0.99      0.98      2002\n",
+      "weighted avg       0.99      0.99      0.99      2002\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Training Set\\n')\n",
+    "print(classification_report(y_train, predict_train_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Evaluation on Test Set\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.78      0.84      0.81       566\n",
+      "         1.0       0.64      0.54      0.58       293\n",
+      "\n",
+      "    accuracy                           0.74       859\n",
+      "   macro avg       0.71      0.69      0.69       859\n",
+      "weighted avg       0.73      0.74      0.73       859\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Model Evaluation on Test Set\\n')\n",
+    "print(classification_report(y_test, predict_test_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### this model is not a valid model and the model gives great result with training data but average result with test set so the model is overfiited."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
